force-app/main/default/objects/PaymentDraft__c/PaymentDraft__c.object-meta.xml
<CustomObject>
    <label>Payment Draft</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Payment Draft Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>