force-app/main/default/objects/PaymentDraft__c/fields/Additional_Product_Fee__c.field-meta.xml
<CustomField>
    <fullName>Additional_Product_Fee__c</fullName>
    <description>Additional product fee from payment calculator</description>
    <label>Additional Product Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>