force-app/main/default/objects/PaymentDraft__c/fields/Banking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Banking_Fee__c</fullName>
    <description>Weekly banking fee from payment calculator</description>
    <label>Banking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>