force-app/main/default/objects/PaymentDraft__c/fields/Calculation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Mode__c</fullName>
    <description>How the payment was calculated - by percent of current payment or desired payment amount</description>
    <label>Calculation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PERCENT</fullName>
                <default>true</default>
                <label>Percent</label>
            </value>
            <value>
                <fullName>DESIRED</fullName>
                <label>Desired Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>