force-app/main/default/objects/PaymentDraft__c/fields/Calculations_JSON__c.field-meta.xml
<CustomField>
    <fullName>Calculations_JSON__c</fullName>
    <description>JSON data for storing payment calculator calculation results and financial data</description>
    <label>Calculations JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>