force-app/main/default/objects/PaymentDraft__c/fields/Configuration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Configuration_JSON__c</fullName>
    <description>JSON data for storing payment calculator configuration settings and parameters</description>
    <label>Configuration JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>