force-app/main/default/objects/PaymentDraft__c/fields/Created_By_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Calculator__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this payment draft was created using the payment calculator component</description>
    <label>Created By Calculator</label>
    <type>Checkbox</type>
</CustomField>