force-app/main/default/objects/PaymentDraft__c/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <description>Timestamp when this draft was deactivated. Used for retention policy cleanup and audit trail.</description>
    <label>Deactivated Date</label>
    <type>DateTime</type>
</CustomField>