force-app/main/default/objects/PaymentDraft__c/fields/Draft_Name__c.field-meta.xml
<CustomField>
    <fullName>Draft_Name__c</fullName>
    <label>Draft Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>