force-app/main/default/objects/PaymentDraft__c/fields/First_Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Draft_Date__c</fullName>
    <description>First payment date from payment calculator</description>
    <label>First Draft Date</label>
    <type>Date</type>
</CustomField>