force-app/main/default/objects/PaymentDraft__c/fields/Invalidated_Date__c.field-meta.xml
<CustomField>
    <fullName>Invalidated_Date__c</fullName>
    <description>Date Payment Draft was invalidated</description>
    <inlineHelpText>Date Payment Draft was invalidated</inlineHelpText>
    <label>Invalidated Date</label>
    <type>Date</type>
</CustomField>