force-app/main/default/objects/PaymentDraft__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this payment draft is active. Inactive drafts are preserved for historical reference instead of being deleted.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>