force-app/main/default/objects/PaymentDraft__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates the primary draft for the parent record. Only one primary is allowed per parent.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>