force-app/main/default/objects/PaymentDraft__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <description>Calculated monthly payment from payment calculator</description>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>