force-app/main/default/objects/PaymentDraft__c/fields/No_Fee_Program__c.field-meta.xml
<CustomField>
    <fullName>No_Fee_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a No Fee Program where fees are diverted to escrow</description>
    <label>No Fee Program</label>
    <type>Checkbox</type>
</CustomField>