force-app/main/default/objects/PaymentDraft__c/fields/Number_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weeks__c</fullName>
    <description>Program duration in weeks from payment calculator</description>
    <label>Number of Weeks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>