force-app/main/default/objects/PaymentDraft__c/fields/Program_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee_Amount__c</fullName>
    <description>Calculated program fee amount from payment calculator</description>
    <label>Program Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>