force-app/main/default/objects/PaymentDraft__c/fields/Program_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee_Percentage__c</fullName>
    <description>Program fee percentage from payment calculator (e.g., 35)</description>
    <label>Program Fee Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>