force-app/main/default/objects/PaymentDraft__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Program type for this payment draft (DCG_MOD, DCG_DEBT, DCG_MOD_CA)</description>
    <label>Program Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>