force-app/main/default/objects/PaymentDraft__c/fields/Selected_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Selected_Product_Codes__c</fullName>
    <description>Semicolon-separated list of selected additional product codes (e.g. LEGAL_MONITORING)</description>
    <label>Selected Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>