force-app/main/default/objects/PaymentDraft__c/fields/Settlement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Percentage__c</fullName>
    <description>Estimated settlement percentage from payment calculator (e.g., 60)</description>
    <label>Settlement Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>