force-app/main/default/objects/PaymentDraft__c/fields/Setup_Fee_Term__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Term__c</fullName>
    <description>Number of setup fee payments from payment calculator</description>
    <label>Setup Fee Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>