force-app/main/default/objects/PaymentDraft__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Sync</fullName>
                <default>true</default>
                <label>In Sync</label>
            </value>
            <value>
                <fullName>Out of Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>