force-app/main/default/objects/PaymentDraft__c/fields/Total_Additional_Product_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional_Product_Fee__c</fullName>
    <description>Total additional product fee from payment calculator</description>
    <label>Total Additional Product Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>