force-app/main/default/objects/PaymentDraft__c/fields/Total_Banking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Banking_Fee__c</fullName>
    <label>Total Banking Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>