force-app/main/default/objects/PaymentDraft__c/fields/Total_Program__c.field-meta.xml
<CustomField>
    <fullName>Total_Program__c</fullName>
    <description>Total program cost from payment calculator</description>
    <label>Total Program</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>