force-app/main/default/objects/PaymentDraft__c/fields/Total_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings__c</fullName>
    <description>Estimated debt savings from payment calculator</description>
    <label>Total Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>