force-app/main/default/objects/PaymentDraft__c/fields/Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payment__c</fullName>
    <description>Calculated weekly payment from payment calculator</description>
    <label>Weekly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>